@@ -771,7 +771,8 @@ public:
 	bool m_fMonsterFight;					// Will creatures fight amoung themselves.
 	bool m_fMonsterFear;					// will they run away if hurt ?
 	DWORD m_iBankIMax;						// Maximum number of items allowed in bank.
-	int m_iBankWMax;						// Maximum weight in WEIGHT_UNITS stones allowed in bank.
+	int m_iBankWMax;						// Maximum weight in stones allowed in bank.
+	int m_iBackpackMaxWeight;				// Maximum weight in stones allowed in main backpack.
 	int m_iVendorMaxSell;					// Max things a vendor will sell in one shot.
 	unsigned int m_iMaxCharComplexity;		// How many chars per sector.
 	unsigned int m_iMaxItemComplexity;		// How many items per meter.
