@@ -1,5 +1,5 @@
 //****************************************************************************
-// Copyright 2019 SphereServer development team
+// Copyright 2020 SphereServer development team
 // Licensed under the Apache License, Version 2.0 (the "License").
 // You may not use this file except in compliance with the License.
 // You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
@@ -244,6 +244,9 @@ BankMaxItems=1000
 
 // Maximum weight in stones allowed in bank (-1 = unlimited)
 BankMaxWeight=1000
+
+// Maximum weight in stones allowed in main backpack (-1 = unlimited)
+BackpackMaxWeight=550
 
 // If 1 vendors will take gold only from backpack
 PayFromPackOnly=0
